src/front/styles/index.css
/* 
    General Styles used on every website (Don't Repeat Yourself)
*/
:root {
  --main-bg-color: #fafafa;
  --secondary-bg-color: #f3f3f3;
  --alt-bg: #272727;
  --primary-color: #fe9c03;
}

.secondary-bg {
  background-color: var(--secondary-bg-color) !important;
}

body {
  background: var(--main-bg-color);
  color: rgba(0, 0, 0, 0.7);
}

.btn-primary {
  background-color: var(--primary-color) !important;
  border: none;
  transition: transform 0.1s ease-in-out;
}

nav .btn-primary {
  background-color: transparent !important;
  color: rgba(0, 0, 0, 0.55) !important;
}
nav .btn-primary:hover {
  background-color: transparent !important;
  color: rgba(0, 0, 0, 0.55) !important;
}

nav li,
.profile-nav {
  font-family: "Work Sans", sans-serif;
  font-weight: 600;
  letter-spacing: -1px;
}
nav li:hover {
  border-bottom: 3px solid var(--primary-color) !important;
  margin-top: -3px;
}
li.logout:hover {
  border-bottom: none !important;
  margin-top: 0;
}

ul.dropdown-menu {
  top: 30px !important;
  left: -100px !important;
}

.btn-primary:hover {
  transform: scale(1.1);
}

.btn-primary:focus,
.btn-primary:focus:active {
  border: none;
  outline: none;
  box-shadow: none;
}

.btn-primary:focus:active {
  transform: scale(0.7);
}
.btn-primary:active {
  outline: none;
  box-shadow: none;
}
.btn-secondary {
  background-color: transparent;
  color: rgba(0, 0, 0, 0.55);
  border: none;
}

.btn-secondary:focus,
.btn-secondary:focus:active {
  border: none;
  outline: none;
  box-shadow: none;
  background-color: transparent;
  color: var(--primary-color);
}

.btn-primary:active {
  outline: none;
  box-shadow: none;
}

.btn-secondary:hover {
  background-color: transparent;
  color: var(--primary-color);
}

.btn-logout {
  background-color: #971d12 !important;
}

.btn-favorite.btn-primary {
  border-radius: 50%;
  background-color: #f5be82 !important;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

nav {
  background-color: var(--main-bg-color) !important;
  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
    rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
    rgba(0, 0, 0, 0.09) 0px 32px 16px;
  border-top: 4px solid var(--primary-color);
}

a.active {
  color: var(--primary-color) !important;
}

ul.navbar-nav {
  right: 0;
}

.logo-container {
  width: 130px;
  height: 80px;
}
img.logo {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

header.landing-header-small {
  background-image: url("https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1500&q=80");
  height: 30vh;
  background-size: cover;
  background-position: center;
  color: var(--main-bg-color);
}

header .highlight {
  color: var(--primary-color);
}

header::before {
  content: "";
  background-color: rgba(0, 0, 0, 0.3);
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
}

.head-content {
  z-index: 1;
}

.cart-card img {
  height: 100%;
  max-width: 100%;
  object-fit: cover;
}

.cart-ingredients-list {
  list-style: none;
}
.card-img-overlay {
  background-color: rgba(0, 0, 0, 0.09);
}

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}
.carousel,
.item,
.active {
  height: 100%;
}
.carousel-inner {
  height: 100%;
}
.carousel {
  margin-bottom: 60px;
}
.carousel-caption {
  z-index: 10;
}
.carousel .item {
  background-color: #777;
}
.carousel .carousel-inner .bg {
  background-repeat: no-repeat;
  background-size: cover;
}
.carousel .carousel-inner .bg1 {
  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/158072/spiderweb.jpg");
  background-position: center top;
  background-color: rgba(0, 0, 0, 0.09);
}
.carousel .carousel-inner .bg2 {
  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/158072/hearthand.jpg");
  background-position: center center;
}
.carousel .carousel-inner .bg3 {
  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/158072/woman-camera.jpg");
  background-position: center bottom;
}

#transparent button {
  transition: opacity 0.3s ease-in-out;
}

#testid:hover #transparent button {
  opacity: 1;
}

#transparent button {
  opacity: 0;
}

*/ html,
.root {
  padding: 0;
  margin: 0;
  font-size: 18px;
}

body {
  font: menu;
  font-size: 1rem;
  line-height: 1.4;
  padding: 0;
  margin: 0;
}
section.details {
  padding-top: 4rem;
  width: 50%;
  margin: auto;
}
h1 {
  font-size: 2rem;
  font-weight: 500;
}
details[open] summary ~ * {
  animation: open 0.3s ease-in-out;
}

@keyframes open {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
details summary::-webkit-details-marker {
  display: none;
}

details summary {
  width: 100%;
  padding: 0.5rem 0;
  border-top: 1px solid black;
  position: relative;
  cursor: pointer;
  font-size: 1.25rem;
  font-weight: 300;
  list-style: none;
}

details summary:after {
  content: "+";
  color: black;
  position: absolute;
  font-size: 1.75rem;
  line-height: 0;
  margin-top: 0.75rem;
  right: 0;
  font-weight: 200;
  transform-origin: center;
  transition: 200ms linear;
}
details[open] summary:after {
  transform: rotate(45deg);
  font-size: 2rem;
}
details summary {
  outline: 0;
}
details p {
  font-size: 0.95rem;
  margin: 0 0 1rem;
  padding-top: 1rem;
}

